modal part added

--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,10 @@
 .first-01{
     margin-left: 300px;
 }
+.modal01{
+    height: 250px;
+    border-radius: 10px;
+}
+.modal02{
+    padding-top: 70px;
+}
